--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd949d">  <td>18/11/22 10:19:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@1f59a598]">TC01</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 10:19:11</td>   <td>5322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@1f59a598]">TC02</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 10:19:13</td>   <td>6697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@1f59a598]">TC03</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 10:19:14</td>   <td>8216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@1f59a598]">TC04</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 10:19:15</td>   <td>9363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@1f59a598]">TC05</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 10:19:19</td>   <td>13638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@1f59a598]">TC06</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 10:19:25</td>   <td>19191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC07()[pri:0, instance:Railway.LoginTest@1f59a598]">TC07</td> 
-  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 10:19:30</td>   <td>24219</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterClass()[pri:0, instance:Railway.LoginTest@1f59a598]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1864869682</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/22 10:18:59</td>   <td>-7092</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeClass()[pri:0, instance:Railway.LoginTest@1f59a598]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1864869682</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/22 12:02:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC01</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/22 12:02:43</td>   <td>4014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC02</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/22 12:02:44</td>   <td>5333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC03</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/22 12:02:45</td>   <td>6700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC04</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/22 12:02:46</td>   <td>7798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC05</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/22 12:02:50</td>   <td>11570</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC06</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/22 12:02:56</td>   <td>16850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC07()[pri:0, instance:Railway.LoginTest@8c3b9d]">TC07</td> 
+  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/22 12:03:01</td>   <td>22280</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterClass()[pri:0, instance:Railway.LoginTest@8c3b9d]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2030036700</td>   <td></td> </tr>
+<tr bgcolor="9e9185">  <td>18/11/22 12:02:32</td>   <td>-6910</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeClass()[pri:0, instance:Railway.LoginTest@8c3b9d]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2030036700</td>   <td></td> </tr>
 </table>
